# segreteria

./: CMakeLists.txt  README.md  Schema Database MYSQL  segreteria.c  server.c  studente.c
